--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -12,4 +12,7 @@
     <item
         android:id="@+id/drawer_trash"
         android:title="Trash Bin" />
+    <item
+        android:id="@+id/drawer_courses"
+        android:title="Courses" />
 </menu>
