--- a/app/src/main/res/layout/activity_courses_page.xml
+++ b/app/src/main/res/layout/activity_courses_page.xml
@@ -18,7 +18,7 @@
         app:title="Courses Page"
         app:titleTextColor="@color/white" />
 
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swiperefresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -26,9 +26,9 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/listCourses"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:listitem="@layout/course_item" />
-
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
 </LinearLayout>
