--- a/app/src/main/res/layout/course_item.xml
+++ b/app/src/main/res/layout/course_item.xml
@@ -7,21 +7,25 @@
 
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
+        android:layout_gravity="center"
         android:layout_margin="8dp"
+        android:elevation="8dp"
         app:cardCornerRadius="12dp"
         app:strokeColor="@color/custom_color_2"
-        app:strokeWidth="2dp">
+        app:strokeWidth="1dp">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/txtCourseName"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:padding="12dp"
                 android:text="Course Name"
                 android:textColor="@color/custom_color_1"
@@ -30,8 +34,10 @@
 
             <TextView
                 android:id="@+id/txtCoursePrice"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
                 android:padding="12dp"
                 android:text="Course Price"
                 android:textColor="@color/custom_color_1"
