--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -1,32 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/linear_1"
+    android:layout_width="wrap_content"
+    android:layout_height="240dp">
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:scaleType="centerCrop"
+        android:src="@drawable/drawer_header_bg" />
 
     <LinearLayout
-        android:id="@+id/linear_1"
         android:layout_width="match_parent"
-        android:layout_height="260dp"
-        android:background="@color/custom_color_2"
+        android:layout_height="match_parent"
         android:gravity="center"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
         <TextView
-            android:id="@+id/txtName"
+            android:id="@+id/txtOrganization"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Jennifer Smith"
+            android:layout_marginBottom="16dp"
+            android:text="Inixindo"
             android:textColor="@color/white"
-            android:textSize="18sp"
+            android:textSize="24sp"
             android:textStyle="bold" />
 
         <ImageView
             android:id="@+id/image_1"
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:layout_marginLeft="28dp"
             android:src="@drawable/img_account_500" />
 
+        <TextView
+            android:id="@+id/txtName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Jennifer Smith"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:textStyle="bold" />
     </LinearLayout>
-</LinearLayout>
+</RelativeLayout>
