--- a/app/src/main/res/layout/course_item.xml
+++ b/app/src/main/res/layout/course_item.xml
@@ -23,7 +23,7 @@
 
             <TextView
                 android:id="@+id/txtCourseName"
-                android:layout_width="250dp"
+                android:layout_width="230dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:padding="12dp"
@@ -43,6 +43,14 @@
                 android:textColor="@color/custom_color_1"
                 android:textSize="16sp"
                 android:textStyle="normal" />
+
+            <ImageView
+                android:id="@+id/imgDelete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:src="@android:drawable/ic_delete" />
 
         </LinearLayout>
 
